# berserk-client-python

./: README.md  pyproject.toml
proto/: query.proto
src/berserk_client/: __init__.py  config.py  grpc_client.py  http_client.py  types.py
tests/: test_e2e.py
